<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_client">

    <fragment
        android:id="@+id/navigation_client"
        android:name="it.snasaunive.nearbyvideorec.ui.client.ClientFragment"
        android:label="@string/title_client"
        tools:layout="@layout/fragment_client" />

    <fragment
        android:id="@+id/navigation_server"
        android:name="it.snasaunive.nearbyvideorec.ui.server.ServerFragment"
        android:label="@string/title_server"
        tools:layout="@layout/fragment_server" />

    <fragment
        android:id="@+id/navigation_video"
        android:name="it.snasaunive.nearbyvideorec.ui.video.VideoFragment"
        android:label="@string/title_video"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/navigation_preview"
        android:name="it.snasaunive.nearbyvideorec.CameraPreview"
        android:label="Camera"
        tools:layout="@layout/fragment_camera_preview" />
</navigation>